Implement Interfaces for services.

--- a/release.properties
+++ b/release.properties
@@ -1,23 +1,30 @@
 #release configuration
-#Mon Jul 29 08:51:09 EDT 2024
+#Mon Jul 29 09:29:49 EDT 2024
 projectVersionPolicyId=default
+scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
+pinExternals=false
+projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
+pushChanges=true
+project.scm.gru.springframework\:sfg-pet-clinic.tag=HEAD
+project.dev.gru.springframework\:pet-clinic-data=0.0.2-SNAPSHOT
+project.rel.gru.springframework\:pet-clinic-data=0.0.1
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
 releaseStrategyId=default
-scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
+project.rel.gru.springframework\:pet-clinic-web=0.0.1
+project.dev.gru.springframework\:sfg-pet-clinic=0.0.2-SNAPSHOT
 project.scm.gru.springframework\:pet-clinic-data.empty=true
-pinExternals=false
-completedPhase=check-poms
+completedPhase=end-release
 scm.url=scm\:git\:git@github.com\:busraclik/sfg-pet-clinic.git
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
-projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-project.scm.gru.springframework\:sfg-pet-clinic.tag=HEAD
 project.scm.gru.springframework\:pet-clinic-web.empty=true
+scm.tag=sfg-pet-clinic-0.0.1
+project.dev.gru.springframework\:pet-clinic-web=0.0.2-SNAPSHOT
 project.scm.gru.springframework\:sfg-pet-clinic.developerConnection=scm\:git\:git@github.com\:busraclik/sfg-pet-clinic.git
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.rel.gru.springframework\:sfg-pet-clinic=0.0.1
 scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
 exec.pomFileName=pom.xml
