--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -80,6 +80,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -117,6 +133,20 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.0</version>
+                <dependencies>
+                    <!--                    <dependency>-->
+                    <!--                        <groupId>org.junit.platform</groupId>-->
+                    <!--                        <artifactId>junit-platform-surefire-provider</artifactId>-->
+                    <!--                        <version>1.9.3</version>-->
+                    <!--                        <scope>test</scope>-->
+                    <!--                    </dependency>-->
+                </dependencies>
+            </plugin>
+
         </plugins>
     </build>
 
