--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -104,6 +104,11 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
